--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,12 @@
-arch: 
-    - ppc64le
-  
+jobs:
+  include:
+    - arch: ppc64le
+      dist: bionic
+    - arch: ppc64le
+      dist: focal
+    - arch: ppc64le
+      dist: xenial
+
 script:
-    - cat /etc/os-release
+  - cat /etc/os-release
+  - uname -m
