--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,14 @@
-jobs:
-  include:
-    - arch: ppc64le
-      dist: bionic
-    - arch: ppc64le
-      dist: focal
-    - arch: ppc64le
-      dist: xenial
+# jobs:
+#   include:
+#     - arch: ppc64le
+#       dist: bionic
+#     - arch: ppc64le
+#       dist: focal
+#     - arch: ppc64le
+#       dist: xenial
+
+arch:
+  - ppc64le
 
 script:
   - cat /etc/os-release
