--- a/.travis.yml
+++ b/.travis.yml
@@ -12,5 +12,5 @@ script:
   - cat /etc/os-release
   - cat /proc/cpuinfo
   - cat /proc/meminfo
-  - df
-  - curl -s https://raw.githubusercontent.com/sivel/speedtest-cli/master/speedtest.py | python -
+  - df -h
+#  - curl -s https://raw.githubusercontent.com/sivel/speedtest-cli/master/speedtest.py | python -
